--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,9 @@ A set of types for representing HTTP requests and responses.
 """
 keywords = ["http"]
 categories = ["web-programming"]
-edition = "2018"
+edition = "2021"
 # When updating this value, don't forget to also adjust the GitHub Actions config.
-rust-version = "1.49.0"
+rust-version = "1.56.0"
 
 [workspace]
 members = [
@@ -34,14 +34,14 @@ exclude = [
 
 [dependencies]
 bytes = "1"
-fnv = "1.0.5"
+fnv = "1"
 itoa = "1"
 
 [dev-dependencies]
-indexmap = "<=1.8"
-quickcheck = "0.9.0"
-rand = "0.7.0"
-seahash = "3.0.5"
-serde = "1.0"
-serde_json = "1.0"
+indexmap = "1"
+quickcheck = "0.9"
+rand = "0.7"
+seahash = "3"
+serde = "1"
+serde_json = "1"
 doc-comment = "0.3"
