--- a/benches/Cargo.toml
+++ b/benches/Cargo.toml
@@ -1,21 +1,21 @@
 [package]
 name = "benches"
 version = "0.0.0"
-edition = "2018"
+edition = "2021"
 publish = false
 
 [dependencies]
 bytes = "1"
-fnv = "1.0.5"
+fnv = "1"
 itoa = "1"
 http = { path = ".." }
-indexmap = "<=1.8"
-quickcheck = "0.9.0"
-rand = "0.7.0"
-seahash = "3.0.5"
-serde = "1.0"
-serde_json = "1.0"
-criterion = "0.3.2"
+indexmap = "2"
+quickcheck = "0.9"
+rand = "0.7"
+seahash = "3"
+serde = "1"
+serde_json = "1"
+criterion = "0.3"
 
 [[bench]]
 name = "header_map"
