--- a/benches/Cargo.toml
+++ b/benches/Cargo.toml
@@ -5,13 +5,13 @@ edition = "2021"
 publish = false
 
 [dependencies]
-bytes = "1"
+bytes = { path = "../bytes" }
 fnv = "1"
 itoa = "1"
 http = { path = ".." }
 indexmap = "2"
 quickcheck = "0.9"
-rand = "0.7"
+rand = { path = "../rand" }
 seahash = "3"
 serde = "1"
 serde_json = "1"
