--- a/benches/Cargo.toml
+++ b/benches/Cargo.toml
@@ -14,7 +14,7 @@ quickcheck = "0.9"
 rand = { path = "../rand" }
 seahash = "3"
 serde = "1"
-serde_json = "1"
+serde_json = { path = "../json" }
 criterion = "0.3"
 
 [[bench]]
